# python-template

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: config.py  litestar.py  main.py
app/db/: exceptions.py  session.py
app/user/: model.py  repository.py  routes.py  schemas.py  service.py
